feat: add feed page

--- a/appflexi/templates/createaccount.html
+++ b/appflexi/templates/createaccount.html
@@ -1,7 +1,7 @@
     {% extends "homepage.html" %}
 
     {% block title %}
-        Fléxi - Criar Conta
+        Fléshi - Criar Conta
     {% endblock %}
 
     {% block form %}
