--- a/appflexi/templates/HomePage.html
+++ b/appflexi/templates/HomePage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>
         {% block title %}
-            fléxi - Página Inicial
+            fléshi - Página Inicial
         {% endblock %}
     </title>
 </head>
