--- a/appflexi/templates/profile.html
+++ b/appflexi/templates/profile.html
@@ -1,11 +1,13 @@
 {% extends "HomePage.html" %}
 
 {% block title %}
-    Fléxi - Perfil
+    Fléshi - Perfil
 {% endblock %}
 
 {% block body %}
     <body>
+        {% include "navbar.html" %}
+
         <h1> Perfil do usuário: {{ user.username }}</h1>
 
         {% if form %}
@@ -16,8 +18,6 @@
                 {{ form.submit() }}
             </form>
         {% endif %}
-
-        <a href="{{ url_for('logout') }}">Sair</a>
 
 
         {% for photo in user.photos %}
