--- a/appflexi/templates/createaccount.html
+++ b/appflexi/templates/createaccount.html
@@ -10,8 +10,20 @@
             {{ form.email.label() }}
             {{ form.email }}
 
+            {% if form.email.errors %}
+                {% for erro in form.email.errors %}
+                    <a class="alert alert-danger">{{ erro }}</a>
+                {% endfor %}
+            {% endif %}
+
             {{ form.username.label }}
             {{ form.username }}
+
+            {% if form.username.errors %}
+                {% for erro in form.username.errors %}
+                    <a class="alert alert-danger">{{ erro }}</a>
+                {% endfor %}
+            {% endif %}
 
             {{ form.password.label }}
             {{ form.password }}
@@ -21,4 +33,7 @@
 
             {{ form.submit }}
         </form>
+
+
+        <a href="{{ url_for('homepage') }}">Tem uma conta? faça login</a>
     {% endblock %}
