--- a/appflexi/templates/navbar.html
+++ b/appflexi/templates/navbar.html
@@ -1,6 +1,35 @@
-<nav>
-  <a href="{{ url_for('feed') }}">Feed</a>
-  <a href="{{ url_for('profile', user_id=current_user.id) }}">Perfil</a>
-  <a href="{{ url_for('logout') }}">Sair</a>
+<nav class="navbar navbar-expand-lg bg-white shadow-sm sticky-top">
+  <div class="container">
+    <a class="navbar-brand fw-bold fs-3" href="{{ url_for('feed') }}" style="color: #8860D0;">
+      Fléshi
+    </a>
 
+    <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarMenu">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
+
+        <li class="nav-item mx-2">
+          <a class="nav-link fw-bold" href="{{ url_for('feed') }}" style="color: #555;">
+            Feed
+          </a>
+        </li>
+
+        <li class="nav-item mx-2">
+          <a class="nav-link fw-bold" href="{{ url_for('profile', user_id=current_user.id) }}" style="color: #555;">
+            Meu Perfil
+          </a>
+        </li>
+
+        <li class="nav-item ms-md-3 mt-2 mt-md-0">
+          <a class="btn btn-sm btn-outline-danger rounded-pill px-4 fw-bold" href="{{ url_for('logout') }}">
+            Sair
+          </a>
+        </li>
+
+      </ul>
+    </div>
+  </div>
 </nav>
